feat: add updates on user interface progress and plan for discord meeting

--- a/daily/3_12_wed.md
+++ b/daily/3_12_wed.md
@@ -8,3 +8,6 @@ Afrekað í dag:
 User UI komið fyrir að sýna lið og mót, vantar að bæta við functionality til að skoða mótin eða liðin betur.
 Fletta upp leikmönnum eftir liðum function komið.
 Ásamt fleiru
+Back button hugmynd komin
+Data komið langa leið
+Þurfum að taka góðan discord fund uppá samræmi.
