--- a/TODO
+++ b/TODO
@@ -13,3 +13,4 @@ UI MENUS
 * user velja lið úr teams menu
 * 
 laga user back og valid choice ui
+cleare eftir error key og cleara eftir að systemið lokar.
