show all tournaments for captain added to apill

--- a/LL/TODO
+++ b/LL/TODO
@@ -9,6 +9,10 @@ TODO
 * gera get_team_by_captain_id() fall til þess að vita hvaða er
 *
 
+TODO:
+show all tournaments for captain í apiLL
+
+
 ***EF VIÐ HÖFUM TÍMA GETUM VIÐ BÆTT ÞESSU VIÐ***
 1. Bætt við modify_tournament, sambærilegt við modify player. Muna að setja á requirement list í skýrsluna
 2
