--- a/LL/TODO
+++ b/LL/TODO
@@ -1,3 +1,4 @@
+## LOGIC
 TODO 
 #4. modify team info tekur inn team clasa og uppfærir
 #5. vantar create match sem tekur inn ókláraðann match clasa og klárar 
@@ -17,3 +18,14 @@ show all tournaments for captain í apiLL
 ***EF VIÐ HÖFUM TÍMA GETUM VIÐ BÆTT ÞESSU VIÐ***
 1. Bætt við modify_tournament, sambærilegt við modify player. Muna að setja á requirement list í skýrsluna
 2
+
+
+## UI
+* req 3: klara að skkoða teams functionaliy ( prenta lista af leikmönnum er klárt fyrir teamcaptain,vantar_ show_team_by_name(name) fall )
+* req 18: create a match sem organiser 
+* req 11: register team to tournament
+* velja mot til að create match
+*
+*
+UI: HILMIR
+cleare eftir error key og cleara eftir að systemið lokar.
