--- a/LL/TODO
+++ b/LL/TODO
@@ -1,8 +1,6 @@
-## LOGIC
-TODO 
-#4. modify team info tekur inn team clasa og uppfærir
-#5. vantar create match sem tekur inn ókláraðann match clasa og klárar 
-
+## LOGIC- TODO 
+4. modify team info tekur inn team clasa og uppfærir ***TILBÚIÐ Í LOGIC OG DATA LAYER***
+5. vantar create match sem tekur inn ókláraðann match clasa og klárar 
 create match þarf að athuga hvort lið sé skráð í annað match á þessari dagsetningu á þessum tíma
 og hvort liðið sé búið að tapa, eða hvort liðið sé í örðu match í þessum úrslitum(16 liða úrslit...)
 
