--- a/LL/TODO
+++ b/LL/TODO
@@ -1,11 +1,6 @@
 ## LOGIC- TODO 
-4. modify team info tekur inn team clasa og uppfærir ***TILBÚIÐ Í LOGIC OG DATA LAYER***
 5. vantar create match sem tekur inn ókláraðann match clasa og klárar 
 create match þarf að athuga hvort lið sé skráð í annað match á þessari dagsetningu á þessum tíma
-og hvort liðið sé búið að tapa, eða hvort liðið sé í örðu match í þessum úrslitum(16 liða úrslit...) ***TILBÚIÐ Í LOGIC OG DATA LAYER***
-6.Fyrir clubs í team captain:
-    - add_team_to_club ***Tilbúið í logic og data***
-    - get_all_teams_in_a_club ***TILBÚIÐ Í LOGID OG DATA***
 
 
 
@@ -15,6 +10,7 @@ og hvort liðið sé búið að tapa, eða hvort liðið sé í örðu match í 
 
 TODO:
 show all tournaments for captain í apiLL
+create match þarf að ákveða server id og athuga hvort serverid se upptekið
 
 
 ***EF VIÐ HÖFUM TÍMA GETUM VIÐ BÆTT ÞESSU VIÐ***
