commenta út stats

--- a/LL/TODO
+++ b/LL/TODO
@@ -30,3 +30,6 @@ create match þarf að ákveða server id og athuga hvort serverid se upptekið
 *
 UI: HILMIR
 cleare eftir error key og cleara eftir að systemið lokar.
+UI: Steinar
+Klára teams information
+
