create R16 matches added

--- a/LL/TODO
+++ b/LL/TODO
@@ -1,11 +1,9 @@
 ## LOGIC- TODO 
 
 ##LOGIC - Þröstur
-Create schedule fyrir 16 liða úrslit. Leikur tekur 2 klst
-Klára get club stats
-
-TODO:
-create match þarf að ákveða server id og athuga hvort serverid se upptekið
+Create matches fyrir 16 liða úrslit. Leikur tekur 2 klst: Mánudagur
+Klára get club stats - Þriðjudagur
+create match þarf að ákveða server id og athuga hvort serverid se upptekið. ###Búið
 
 
 ***EF VIÐ HÖFUM TÍMA GETUM VIÐ BÆTT ÞESSU VIÐ***
