--- a/LL/TODO
+++ b/LL/TODO
@@ -13,13 +13,22 @@ create match þarf að ákveða server id og athuga hvort serverid se upptekið.
 
 
 ## UI
-* req 3: klara að skkoða teams functionaliy ( prenta lista af leikmönnum er klárt fyrir teamcaptain,vantar_ show_team_by_name(name) fall )
-* req 18: create a match sem organiser 
+
+* req 18: create a match sem organiser eilla buið
 * Allt club shit vantar inn
+* delete tournament fyrir organiser
+* register results á bara vera hægt ef leikur er búinn
+* Give points to club, team, player
+* losers bracket
+* sign up for multiple events virkar en vantar að validatea schedule, choose another time, team1 is playing at this time
+* check á server id og svoleiðis, all servers busy at this time, choose different server
+* see all teams belonging to a club
 * vantar að logga sig inn sem nýr team captain og búa til lið...C krafa
+* password og svona fyrir organiser?
+
 UI: HILMIR
 
 
 UI: Steinar
-breyta format fyrir printing skipanir, setja str fall á alla model classes
+
 
