--- a/LL/TODO
+++ b/LL/TODO
@@ -20,7 +20,7 @@ create match þarf að ákveða server id og athuga hvort serverid se upptekið.
 * add team to club fyrir captain
 * remove player sem team captain, komið í LL vantar UI
 * register results á bara vera hægt ef leikur er búinn
-* Give points to club, team, player
+* Give points to team
 * losers bracket
 * sign up for multiple events virkar en vantar að validatea schedule, choose another time, team1 is playing at this time
 * check á server id og svoleiðis, all servers busy at this time, choose different server
