--- a/LL/TODO
+++ b/LL/TODO
@@ -51,9 +51,9 @@ Laga email validation
 Low priority(hafa edit team og edit player eins)
 
 #Setja inn að geta skoða uppl um tournamnets inni my tournaments sem team captain
-ADD TEAM TO CLUB
+#ADD TEAM TO CLUB
 #Geta bakkað og quitað þegar þú ert í create match
 #Bæta við “Select match to register results”
 (Laga back í set results) ef steinar hefur tíma
 Create match í quarter finals ætti að sækja öll lið sem eru búin að vinna.
-Bæta við bikar þegar final klárast
+#Bæta við bikar þegar final klárast
