--- a/LL/TODO
+++ b/LL/TODO
@@ -32,17 +32,22 @@ UI: HILMIR
 
 UI: Steinar
 
+# Sjá tournaments fyrir teams - 30 sek
+# Keyra gegnum forrit, búa til heilt mót frá grunni.
+#Alls staðar þar sem er update eða modify þarf að setja inn validation
+#Sorta öll mót og leiki eftir dagsetningum
+#Laga index fyrir options
+#Setja inn að geta skoða uppl um tournamnets inni my tournaments sem team captain
+#ADD TEAM TO CLUB
+#Geta bakkað og quitað þegar þú ert í create match
+#Bæta við “Select match to register results”
+#Bæta við bikar þegar final klárast
 
 Fínpússa - fara yfir öll layer, deletea oþarfa shiti og passa print i data og ll
 Create team, allt fyrir clubs og allt fyrir points er auka sem við klárum í dag
-# Sjá tournaments fyrir teams - 30 sek
 Fara aftur yfir skjái
-# Keyra gegnum forrit, búa til heilt mót frá grunni.
 Laga register results fyrir leiki sem eru ekki búnir
-Alls staðar þar sem er update eða modify þarf að setja inn validation
 Ef nýtt lið þá gerir organiser það, gerir nytt handle og þa siðan loggar nyr tc sig inn og klárar liðið
-Sorta öll mót og leiki eftir dagsetningum
-Laga index fyrir options
 Ef tournament start date komið og ekki nægilega mörg lið þá kemur error og organiser getur deletað
 Hreinsa gögn sem við höfum prufað 
 Taka út það sem lítur út fyrir aðvera option en er ekki option
@@ -50,10 +55,5 @@ Laga þegar þú breytir handle hjá team captain, þá ætti að breytast lika 
 Laga email validation
 Low priority(hafa edit team og edit player eins)
 
-#Setja inn að geta skoða uppl um tournamnets inni my tournaments sem team captain
-#ADD TEAM TO CLUB
-#Geta bakkað og quitað þegar þú ert í create match
-#Bæta við “Select match to register results”
 (Laga back í set results) ef steinar hefur tíma
 Create match í quarter finals ætti að sækja öll lið sem eru búin að vinna.
-#Bæta við bikar þegar final klárast
