--- a/LL/TODO
+++ b/LL/TODO
@@ -37,7 +37,7 @@ UI: Steinar
 #Bæta við bikar þegar final klárast
 
 Fínpússa - fara yfir öll layer, deletea oþarfa shiti og passa print i data og ll
-Create team, allt fyrir clubs og allt fyrir points er auka sem við klárum í dag
+Create team
 Fara aftur yfir skjái
 Laga register results fyrir leiki sem eru ekki búnir
 Ef nýtt lið þá gerir organiser það, gerir nytt handle og þa siðan loggar nyr tc sig inn og klárar liðið
