--- a/LL/TODO
+++ b/LL/TODO
@@ -6,14 +6,14 @@ ef ekki 16 lið á móti þá deletast mót
 
 ## UI
 
-* req 18: create a match sem organiser eilla buið
-* Allt club shit vantar inn
+# req 18: create a match sem organiser eilla buið
+# Allt club shit vantar inn
 
-* add team to club fyrir captain
+# add team to club fyrir captain
 
 * register results á bara vera hægt ef leikur er búinn
 
-* sign up for multiple events virkar en vantar að validatea schedule, choose another time, team1 is playing at this time
+# sign up for multiple events virkar en vantar að validatea schedule, choose another time, team1 is playing at this time
 # check á server id og svoleiðis, all servers busy at this time, choose different server
 # see all teams belonging to a club?
 * vantar að logga sig inn sem nýr team captain og búa til lið...C krafa
