--- a/LL/TODO
+++ b/LL/TODO
@@ -48,3 +48,4 @@ Low priority(hafa edit team og edit player eins)
 
 (Laga back í set results) ef steinar hefur tíma
 Create match í quarter finals ætti að sækja öll lið sem eru búin að vinna.
+NOTANDI MÁ EKKI SETJA INN KOMMU
