--- a/daily/11_12_thu.md
+++ b/daily/11_12_thu.md
@@ -1,5 +1,5 @@
 Fimmtudagurinn 11. Desember
-Morgunfundur settur 8:10
+Morgunfundur settur 8:10, Allir viðstaddir nema þröstur sem kom um 2 leytið.
 Fínpússa - fara yfir öll layer, deletea oþarfa shiti og passa print i data og ll
 Create team, allt fyrir clubs og allt fyrir points er auka sem við klárum í dag
 Sjá tournaments fyrir teams - 30 sek
