Laga import og svona

--- a/LL/TODO
+++ b/LL/TODO
@@ -32,9 +32,8 @@ Gera listann things to look at
 Ef nýtt lið þá gerir organiser það, gerir nytt handle og þa siðan loggar nyr tc sig inn og klárar liðið (Steinar)
 
 Hreinsa gögn sem við höfum prufað 
-Laga email validation - steinar#Komið nema timi gefst til að bæta meir við
-Fínpússa - fara yfir öll layer, deletea oþarfa shiti og passa print i data og ll
-Create team
-Fara aftur yfir skjái
+# Laga email validation - steinar#Komið nema timi gefst til að bæta meir við
+# Fínpússa - fara yfir öll layer, deletea oþarfa shiti og passa print i data og ll
 #gera clubs skja 
 
+Fara aftur yfir skjái
